build/sites/j64/manager-cluster/resources/contour-resources-manager-cluster-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: contour-envoy-segment1
  namespace: contour
spec:
  type: LoadBalancer
  loadBalancerIP: 1.0.0.205
  ports:
  - name: http
    nodePort: 30299
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 31483
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: envoy
    app.kubernetes.io/instance: contour
    app.kubernetes.io/name: contour
