build/sites/j64/manager-cluster/resources/portainer-resources-v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
  annotations:
    projectcontour.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - portainer.dev.kube
    secretName: portainer-tls
  rules:
  - host: portainer.dev.kube
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: portainer
            port:
              number: 9000
  ingressClassName: contour
